--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "basiclightbox": "^5.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
